Text align was wrong on desktop for form; fixed this

--- a/style.css
+++ b/style.css
@@ -136,6 +136,5 @@ body {
     .content-container {
         flex: 1;
         padding: 5%;
-        text-align: left;
     }
 }
